k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sentinelforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: joypatel2403/sentinelforge-frontend:latest
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sentinelforge
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
